// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ReportUpload actions should startProcess 1`] = `
Array [
  Array [
    Object {
      "payload": Object {
        "processID": 3,
        "status": "running",
      },
      "type": "YUPANA/REPORT_UPLOAD_PROCESS_START",
    },
  ],
]
`;

exports[`ReportUpload actions should stopProcess 1`] = `
Array [
  Array [
    Object {
      "payload": Object {
        "status": "stopped",
      },
      "type": "YUPANA/REPORT_UPLOAD_PROCESS_STOP",
    },
  ],
]
`;
